- changed the nav flex display to center to remove the gaps between each nav element - added css for each nav-id tag so they can each have fixed widths - changed the width of each dropdown to equal the nav-id widths

--- a/style.scss
+++ b/style.scss
@@ -22,7 +22,7 @@ $white: #fff;
     padding-right: 56.6px;
     font-size: 1.125rem;
     display: flex;
-    justify-content: space-evenly;
+    justify-content: center;
     height: 99.01px;
     width: auto;
     background-color: $nav-color;
@@ -34,12 +34,18 @@ $white: #fff;
 .main-nav a {
     color: $white;
     font-family: Poppins,sans-serif;
-    padding: 27px 60px 18px;
+    padding: 27px 30px 18px;
     text-align: center;
     vertical-align: middle;
     text-decoration: none;
     letter-spacing: 0.4px;
 }
+
+#nav-1, #nav-2, #nav-3, #nav-4, #nav-5, #nav-6, #nav-7, {
+    width: 167px;
+    text-align: center;
+    vertical-align: middle;
+}  
 
 .dropdown {
     float: left;
@@ -53,7 +59,6 @@ $white: #fff;
     text-transform: uppercase;
     border: none;
     outline: none;
-    color: white;
     background-color: inherit;
     font-family: inherit;
     text-align: center;
@@ -64,7 +69,7 @@ $white: #fff;
   .dropdown-content {
     display: none;
     position: absolute;
-    width: 175px;
+    width: 167px;
     z-index: 1;
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
